<resources>
    <string name="app_name">CalcIMC</string>
    <string name="startButton">Empezar</string>
    <string name="motivationalSentence">\"Orandum est ut sit mens sana in corpore sano\".</string>
    <string name="name">Nombre:</string>
    <string name="age">Edad:</string>
    <string name="gender">Género:</string>
    <string name="height">Altura:</string>
    <string name="weight">Peso:</string>
    <string name="result">Resultado:</string>
    <string name="calcBMI">Calcula tu IMC y FCmax introduciendo los siguientes datos:</string>
    <string name="male">Varón</string>
    <string name="female">Mujer</string>
    <string name="calc">Calcular</string>
    <string name="results">Resultados</string>
    <string name="bmi">Índice Masa Corporal:</string>
    <string name="clasification">""</string>
    <string name="lowWeight">Peso insuficiente</string>
    <string name="normalWeight">Normopeso</string>
    <string name="overweightI">Sobrepeso grado I</string>
    <string name="overWeightII">Sobrepeso grado II</string>
    <string name="obesityI">Obesidad de tipo I</string>
    <string name="obesityII">Obesidad de tipo II</string>
    <string name="obesityIII">Obesidad mórbida</string>
    <string name="obesityIV">Obesidad extrema</string>
    <string name="sedentary">FcMax para un estilo de vida sendentario:</string>
    <string name="trained">FcMax para un estilo de vida activo:</string>
    <string name="hintHeight">valor en m. (ej: 1.74)</string>
    <string name="hintWeight">valor en kg.</string>
    <string name="gratitude">gracias por utlizar esta aplicación.</string>
</resources>

